--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -2404,6 +2404,7 @@
   "static.dashboard.forecastingunit": "Forecasting Unit",
   "static.common.buildTree": "Build Tree",
   "static.ForecastSummary.EvaluateYour": "and evaluate your",
+  "static.importIntoSP.dataExistsGray": "Data exists in Supply Plan Program and is past {{month}} months, so it cannot be imported.",
   "static.report.totalAirLeadTime": "Planned to Received (Air)",
   "static.supplyPlan.fundingSourceCannotBeTBD": "Funding Source cannot be `TBD`",
   "static.dashboard.programs": "Programs",
@@ -3012,6 +3013,7 @@
   "static.healtharea.countrytext": " Please select country",
   "static.dashboard.downloadprogram": "Download program",
   "static.program.programCode": "Program Code",
+  "static.importIntoSP.dataExists": "Data already exists in Supply Plan Program",
   "static.ForecastSummary.UsingNationalView": "Using this screen (National View)",
   "static.supplyPlanFormula.consensusConsumption": "Consensus Consumption",
   "static.message.login.incorrectEmailUser": "Incorrect email or username",
