--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -2404,6 +2404,7 @@
   "static.dashboard.forecastingunit": "Unité de prévision",
   "static.common.buildTree": "Construire un arbre de prévision",
   "static.ForecastSummary.EvaluateYour": "et évaluez votre",
+  "static.importIntoSP.dataExistsGray": "Les données existent dans le programme du plan d`approvisionnement et sont passées {{month}} mois, il ne peut donc pas être importé.",
   "static.report.totalAirLeadTime": "Délai «planifié à reçu» par voie aérienne (en mois)",
   "static.supplyPlan.fundingSourceCannotBeTBD": "La source de financement ne peut pas être «à déterminer»",
   "static.dashboard.programs": "Programmes",
@@ -3012,6 +3013,7 @@
   "static.healtharea.countrytext": "Veuiller sélectionner un pays",
   "static.dashboard.downloadprogram": "Charger le programme",
   "static.program.programCode": "Code du programme",
+  "static.importIntoSP.dataExists": "Les données existent déjà dans le programme du plan d`approvisionnement",
   "static.ForecastSummary.UsingNationalView": "Utilisation de cet écran (vue nationale)",
   "static.supplyPlanFormula.consensusConsumption": "Consommation consensuelle",
   "static.message.login.incorrectEmailUser": "Adresse e-mail ou nom d`utilisateur incorrect",
