--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3623,5 +3623,6 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.supplyPlan.addNewBatch":"Input New Batch and Expiry Information"
 }
