--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3624,5 +3624,6 @@
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
   "static.pipeline.pipelineConvertorLinux": "Linux.",
-  "static.supplyPlan.addNewBatch":"Input New Batch and Expiry Information"
+  "static.supplyPlan.addNewBatch":"Input New Batch and Expiry Information",
+  "static.shipmentDataEntry.expiryDateMustBeGreaterThanAdjustmentDate": "Expiry date must be greater than adjustment date"
 }
