--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -3623,5 +3623,7 @@
   "static.currency.conversionrateusd": "Taxa de câmbio para 1 USD",
   "static.logout.confirmLogout": "Tem certeza que deseja sair?",
   "static.common.node": "Nó",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.supplyPlan.addNewBatch":"Saisir les nouvelles informations de lot et d'expiration",
+  "static.shipmentDataEntry.expiryDateMustBeGreaterThanAdjustmentDate": "La date d'expiration doit être supérieure à la date d'inventaire"
 }
