--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -2374,6 +2374,7 @@
   "static.supplyPlanFormula.minMonthOfStockEx4": "Min= MAX (MIN MONTH OF STOCK,Min MoS Guardrail)",
   "static.supplyPlanFormula.minMonthOfStockEx5": "Min = MAX (4,3)",
   "static.supplyPlanFormula.minMonthOfStockEx2": "REORDER FREQUENCY = 3",
+  "static.supplyPlan.addNewBatch": "Input New Batch and Expiry Information",
   "static.dashboard.consumption": "Consumption (Forecast vs. Actual)",
   "static.supplyPlanFormula.minMonthOfStockEx3": "Min MoS Guardrail = 3(Based on realm)",
   "static.supplyPlan.userEnteredBatches": "User-Entered Batches",
@@ -3160,6 +3161,7 @@
   "static.dataset.manageProgramInfo": "Update Program Info",
   "static.equivalancyUnit.equivalancyUnitManage": "Manage Equivalency Unit",
   "static.extrpolation.graphTitlePart1": "Forecast for ",
+  "static.shipmentDataEntry.expiryDateMustBeGreaterThanAdjustmentDate": "Expiry date must be greater than Inventory Date",
   "static.tree.monthlyEndNoSeasonality": "(No seasonality)",
   "static.whatIf.supplyPlanSaved": "Supply plan saved successfully.",
   "static.message.addBranchTemplate": "Branch Template Added Successfully",
@@ -3337,7 +3339,7 @@
   "static.forecastingunit.forecastingunittext": "Enter Forecasting Unit",
   "static.planningUnit.plannignUnitMeasure": "Enter Planning Unit UoM (Unit of Measure)",
   "static.dataEntryAndAdjustments.ClickSubmit": "Click \"Submit\" to save any entered data",
-  "static.stockStatus.doYouWantToAggregate": "Do you want to aggregate selected programs",
+  "static.stockStatus.doYouWantToAggregate": "Do you want to aggregate selected products and/or programs?",
   "static.ticket.header": "QAT Helpdesk",
   "static.user.confirmNewPasswordLabel": "Confirm new password",
   "static.realm.realm": "Realm",
@@ -3623,7 +3625,5 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux.",
-  "static.supplyPlan.addNewBatch":"Input New Batch and Expiry Information",
-  "static.shipmentDataEntry.expiryDateMustBeGreaterThanAdjustmentDate": "Expiry date must be greater than Inventory Date"
+  "static.pipeline.pipelineConvertorLinux": "Linux."
 }
