--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -734,6 +734,7 @@
   "static.supplyPlan.minMonthsOfStockNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Min Month Of Stock.",
   "static.report.isincludeplannedshipmentSelect": "Include Planned Shipments",
   "static.whatIf.validEndValue": "Enter End Value",
+  "static.tooltip.roleAcl": "Please see User Manual Annex 3, User Role Matrix for more information.",
   "static.compareAndSelect.belowLowestConsumption": "% below forecast.",
   "static.extrapolation.MoreSensitive": "More sophisticated models are more sensitive to problems in the data",
   "static.common.listtree": "List Tree",
@@ -916,6 +917,7 @@
   "static.message.user.couldNotBeUnlocked": "User could not be unlocked",
   "static.supplyPlan.roundingOption": "Rounding Option",
   "static.subfundingsource.subfundingsourcelisttext": "Sub-funding source List",
+  "static.program.nestedHeader": "Access control based on the following:",
   "static.extrapolation.TESHoltWinters": "TES, Holt-Winters",
   "static.dashboard.consExtrapolation": "Cons Extrapolation",
   "static.planningUnit.conversionFactor": "Max 10 digit number and 2 digits after decimal are allowed.",
@@ -1934,6 +1936,7 @@
   "static.validSpace.string": "No spaces are allowed at beginning or end of string. Only single spaces are allowed between words.",
   "static.monthlyForecast.EnableUser": "Enable users to view the final (selected) forecasts for a single program, and displays the forecast by product and month. This output aggregates all regional forecasts into one total forecast. If you want to view disaggregated regional forecasts, you can do so by exporting the output as a CSV.",
   "static.tooltip.version": "Only local version settings are editable Please download program if you wish to edit version settings",
+  "static.editProgram.userListHeader": "Users who have access to",
   "static.tooltip.planningProgramSetting": "Program must be downloaded first as Planning Unit Settings are version specific",
   "static.message.login.unauthorized": "You don`t have permission to perform this operation or access this resource. Contact the realm admin if you need access",
   "static.subfundingsource.errorfundingsource": "Select funding source",
@@ -3400,6 +3403,7 @@
   "static.tree.templateNameRequired": "Please enter template name.",
   "static.extrapolation.WAPE": "WAPE (Weighted Absolute Percentage Error)",
   "static.tree.scenarioName": "Scenario Name",
+  "static.editProgram.userListSubHeader": "By default, the users are given access based on the selected Procurement Agent(s) and Funder(s) in the Program Info screen above. Additional users may be added manually as requested by a Program Admin. If you have concerns or requests regarding user access, please submit a ticket via the ",
   "static.problem.addedSuccessfully": "Problem added successfully",
   "static.common.dashboard": "Dashboard",
   "static.supplyPlan.planByDateNote": "Planned by date",
