--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -879,6 +879,7 @@
   "static.tooltip.Conversionfactor": "Auto-populated based on conversion between forecasting unit (FU) and planning unit (PU)",
   "static.dataEntryAndAdjustments.TopTable": "On the top table, click on a product to display the detailed data table for that product. The detailed data table will have a section for each region in your program.",
   "static.importFromQATSupplyPlan.Import": "Import",
+  "static.tooltip.fundingSourceAcl": "This shows the funding source(s) the user is associated with and this field is linked to the Funding Source selection in the top half of this screen. You can limit/grant access to a particular Funding Source from accessing your program by removing/adding them from the Funding Source selection at the top of this screen. Note that the Funding Source selection also dictates which dropdowns will appear in your shipment data entry screens.",
   "static.common.pr": "PR",
   "static.importFromQATSupplyPlan.forecastProgramRegion": "Forecast Program (Region)",
   "static.message.login.invalidCredentials": "Incorrect login or password",
@@ -3314,6 +3315,7 @@
   "static.planningunit.capacity": "Volume (m^3)",
   "static.common.realmtext": "Select Realm",
   "static.commitTree.noForecastSelected": "No Forecast Selected",
+  "static.tooltip.procurementAgentAcl": "This shows the procurement agent(s) the user is associated with and this field is linked to the Procurement Agent selection in the top half of this screen. You can limit/grant access to a particular Procurement Agent from accessing your program by removing/adding them from the Procurement Agent selection at the top of this screen. Note that the Procurement Agent selection also dictates which dropdowns will appear in your shipment data entry screens.",
   "static.tree.+AddTree": "+ Add Tree",
   "static.commitVersion.cannotCommitWithOpenProblems": "You cannot upload a final version with 'Open' problems. Please ensure there are no 'Open' problems in the QAT Problem List and try uploading again.",
   "static.dashboard.report": "Reports",
