Changes for QAT-6032 CR

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3631,5 +3631,12 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.problemList.minMaxProblemDescOverMax":" • are over max for {{count}} month(s) ({{monthNames}})\n",
+  "static.problemList.minMaxProblemDescUnderMin":" • are under min for {{count}} month(s) ({{monthNames}})\n",
+  "static.problemList.minMaxProblemDescStockedOut":" • are stocked out for {{count}} month(s) ({{monthNames}})\n",
+  "static.problemList.minMaxProblemDescShipments":" • have shipments in {{monthNames}}",
+  "static.problemList.suggestion1":"Please consider delaying/canceling shipment(s), review future expiries, or donating stock. Indicate if any of these actions have been/will be taken, and you face any obstacles.",
+  "static.problemList.suggestion2":"Please consider planning & ordering, expediting, or increasing shipment quantity. Indicate if any of these actions have been/will be taken, and you face any obstacles.",
+  "static.problemList.suggestion3":"Please consider adjust shipment quantity. Indicate if any of these actions have been/will be taken, and you face any obstacles."
 }
