--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -185,7 +185,7 @@
   "static.CompareSelect.SymbolDenotes": "símbolo indica que não há quantidade prevista disponível; a linha inteira ficará cinza e não editável, pois não há nada para exibir ou selecionar.",
   "static.message.skucodevalid": "Somente são  permitidos letras e números",
   "static.problemReport.addressedExample": "Uma unidade de planeamento em processo de eliminação progressiva tem apenas 8 meses de consumo previsto no futuro, em vez de 18. Isso é aceitável, pois é uma unidade de planeamento em processo de eliminação progressiva, mas o usuário ainda precisará desativar a unidade de planeamento quando ela for totalmente eliminada , é por isso que o problema está marcado como `Endereçado` em vez de `Resolvido`.",
-  "static.mt.reminders3A": "Uma vez vinculados, os embarques não poderão ser editados, exceto o campo de notas e o campo de fator de conversão, que são editáveis ​​apenas nas telas de vinculação do ERP.",
+  "static.mt.reminders3A": "Uma vez vinculados, os envios não poderão ser editados, exceto os campos de notas e ARU, que são editáveis ​​apenas nas telas de vinculação do sistema ERP.",
   "static.common.allCategories": "Todas as categorias",
   "static.dashboard.productValidation": "Validação de Produto",
   "static.integration.editIntegration": "Editar integração",
@@ -458,6 +458,7 @@
   "static.shipmentDetails.warningBudget": "AVISO: Não há fundos disponíveis para este orçamento. Deseja continuar?",
   "static.message.newPasswordMinLength": "A senha deve ter pelo menos 6 caracteres",
   "static.common.reset": "Redefinir",
+  "static.mt.reminders2D1a1A": "Se a unidade do sistema ERP for diferente da sua unidade de planejamento QAT, você poderá adicionar uma ARU com a unidade do ERP correspondente. Após a sincronização dos dados mestre, a nova ARU estará disponível na lista suspensa ao vincular um novo envio.",
   "static.role.role": "Função",
   "static.report.qatPID": "ID do produto QAT",
   "static.common.planningUnits": "unidades de planeamento",
@@ -1990,7 +1991,7 @@
   "static.forecastSummary.eitherTreeOrConsumptionValidation": "A seleção múltipla está disponível apenas para previsões de árvores",
   "static.extrapolation.GettingStarted": "Iniciando a extrapolação",
   "static.common.errors": "Tipo de erro de previsão",
-  "static.mt.reminders2D3": "Seu pedido no sistema ERP é de 20 embalagens (10 barras de chocolate por embalagem), mas seu plano de suprimento é em embalagens de 100 barras de chocolate. Para calcular o fator de conversão, considere quantas unidades individuais você tem no tamanho do pacote ERP (10) e divida por quantas unidades individuais você tem em sua unidade de planeamento QAT (100). Neste exemplo, o fator de conversão é 10 barras / 100 barras = 0,1. Multiplicando a quantidade do pedido ERP por 0,1 resulta na quantidade do embarque QAT convertida de 2, que é o número que será usado em seu plano de suprimento.",
+  "static.mt.reminders2D3": "Seu pedido no sistema ERP é de 20 pacotes (10 barras de chocolate por pacote), mas seu plano de suprimentos utiliza pacotes de 100 barras de chocolate. Para calcular o fator de conversão e adicioná-lo como uma nova unidade de medida, considere quantas unidades individuais você tem no tamanho do pacote do ERP (10) e divida pelo número de unidades individuais na unidade de planejamento do QAT (100). Neste exemplo, o fator de conversão é 10 barras / 100 barras = 0,1. Multiplicando a quantidade de envio do ERP por 0,1 (ou dividindo por 10), obtemos a quantidade de envio convertida para o QAT, que é 2, o número que será usado em seu plano de suprimentos.",
   "static.fundingsource.realm": "Reino",
   "static.forecastErrorReport.noActualData": "O mês atual não contém o consumo real",
   "static.dashboard.stockoutTooltip": "O valor vermelho indica unidades de planejamento com pelo menos um mês de falta de estoque nos próximos 18 meses. O valor azul indica unidades de planejamento sem faltas de estoque nos próximos 18 meses",
@@ -2452,6 +2453,7 @@
   "static.tree.or": "ou",
   "static.procurementAgentProcurementUnit.approvedToShippedLeadTimeText": "Insira o prazo de execução de aprovado até embarcado, para este agente de compras (em meses)",
   "static.manualTagging.currentEstimetedDeliveryDate": "Data estimada de recebimento",
+  "static.report.localProcurementAgentLeadTimeHeader": "Prazo de entrega do agente de compras local",
   "static.tree.calculatedChangeForMonth": "Alteração calculada para o mês",
   "static.integration.listIntegration": "Listar integração",
   "static.common.profile": "Perfil",
@@ -3386,10 +3388,12 @@
   "static.tree.nodeltr": "Posição do nó (L a R)",
   "static.planningunit.planningunitupdate": "Mapear unidade de relatório alternativa",
   "static.report.monthsOfStock": "Meses de stock (MS)",
+  "static.mt.linkingNotificationNote1": "Está disponível apenas para versões locais. Se você não encontrar o programa ou a versão que precisa, por favor,",
   "static.procurementUnit.duplicateProcurementUnit": "Foram achados detalhes da unidade de aquisição duplicados",
   "static.QATForecastImport.AllForecast": "Nem todas as unidades de planeamento de previsão precisam ser importadas, no entanto, todas as unidades de planeamento de previsão devem ter uma seleção na tabela de mapeamento. Por exemplo, na tabela abaixo, mesmo que 2 produtos não estejam sendo importados, você ainda precisa selecionar \"Não importar\".",
   "static.dataEntryAndAdjustments.EnableUser": "Permita que os usuários preparem dados históricos de consumo antes de avançar",
   "static.manualTagging.qatShipmentTitle": "Embarque QAT:",
+  "static.mt.linkingNotificationNote2": "Seu programa primeiro.",
   "static.common.startTyping": "Comece a digitar para pesquisar",
   "static.dashboard.totalExpiries": "Valor total dos vencimentos",
   "static.usagePeriod.conversionTOFUTest": "São permitidos no máximo 14 dígitos enteiros e 4 dígitos após o decimal.",
