--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -185,7 +185,7 @@
   "static.CompareSelect.SymbolDenotes": "symbol denotes that there is no forecast quantity available; the entire row will be gray and non-editable as there is nothing to display or select.",
   "static.message.skucodevalid": "Only letters and numbers allowed",
   "static.problemReport.addressedExample": "A phasing out planning unit only has 8 months of forecasted consumption in the future instead of 18. This is acceptable as it is a phasing out planning unit, but the user will still need to de-activate the planning unit once it is fully phased out, which is why the issue is marked as `Addressed` instead of `Resolved`.",
-  "static.mt.reminders3A": "Once linked, shipments will be non-editable other than the notes field and conversion factor field, which are editable only on the ERP linking screens. ",
+  "static.mt.reminders3A": "Once linked, shipments will be non-editable other than the notes field and ARU field, which are editable only on the ERP linking screens.",
   "static.common.allCategories": "All Categories",
   "static.dashboard.productValidation": "Product Validations",
   "static.integration.editIntegration": "Edit Integration",
@@ -458,6 +458,7 @@
   "static.shipmentDetails.warningBudget": "WARNING: No funds available for this budget. Do you want to continue?",
   "static.message.newPasswordMinLength": "Password must be at least 6 characters long",
   "static.common.reset": "Reset",
+  "static.mt.reminders2D1a1A": "If the ERP unit is different from your QAT planning unit, you can add an ARU with the matching ERP unit. After Master Data Syncing, the new ARU will be available in the dropdown selection when linking a new shipment.",
   "static.role.role": "Role",
   "static.report.qatPID": "QAT Product ID",
   "static.common.planningUnits": "planning units",
@@ -1990,7 +1991,7 @@
   "static.forecastSummary.eitherTreeOrConsumptionValidation": "Multi-select is only available for tree forecasts",
   "static.extrapolation.GettingStarted": "Getting started on extrapolation",
   "static.common.errors": "Type of Forecast Error",
-  "static.mt.reminders2D3": "Your order in the ERP system is 20 packs (10 chocolate bars per pack), but your supply plan is in packs of 100 chocolate bars. To calculate the conversion factor, consider how many single units you have in the ERP pack size (10) and divide by how many single units you have in your QAT planning unit (100). In this example, the conversion factor is 10 bars / 100 bars = 0.1. Multiplying the ERP shipment quantity by 0.1 results in the converted QAT shipment quantity of 2, which is the number that will be used in your supply plan.  ",
+  "static.mt.reminders2D3": "Your order in the ERP system is 20 packs (10 chocolate bars per pack), but your supply plan is in packs of 100 chocolate bars. To calculate the conversion factor and add it as a new ARU, consider how many single units you have in the ERP pack size (10) and divide by how many single units you have in your QAT planning unit (100). In this example, the conversion factor is 10 bars / 100 bars = 0.1. Multiplying the ERP shipment quantity by 0.1 (or dividing by 10) results in the converted QAT shipment quantity of 2, which is the number that will be used in your supply plan.",
   "static.fundingsource.realm": "Realm",
   "static.forecastErrorReport.noActualData": "Current month does not contain actual consumption",
   "static.dashboard.stockoutTooltip": "Red value indicates planning units with at least one month of stockout in the next 18 months. Blue value indicates planning units with no stockouts in the next 18 months",
@@ -2452,6 +2453,7 @@
   "static.tree.or": "or",
   "static.procurementAgentProcurementUnit.approvedToShippedLeadTimeText": "Enter `Approved to Shipped` lead time for this Procurement Agent (in months)",
   "static.manualTagging.currentEstimetedDeliveryDate": "Estimated Receive Date",
+  "static.report.localProcurementAgentLeadTimeHeader": "Local Procurement Agent Lead Time",
   "static.tree.calculatedChangeForMonth": "Calculated change for Month",
   "static.integration.listIntegration": "List Integration",
   "static.common.profile": "Profile",
@@ -3386,10 +3388,12 @@
   "static.tree.nodeltr": "Node Position (L to R)",
   "static.planningunit.planningunitupdate": "Map Alternate Reporting Unit",
   "static.report.monthsOfStock": "Months of Stock (MOS)",
+  "static.mt.linkingNotificationNote1": "is only available for local versions. If you don’t see the program or version you need, please",
   "static.procurementUnit.duplicateProcurementUnit": "Duplicate Procurement Unit Details Found",
   "static.QATForecastImport.AllForecast": "Not all forecast planning units need to be imported, however, all forecast planning units must have a selection in the mapping table. For example, in the below table, even though 2 products are not being imported, you would still need to select \"Do not import\".",
   "static.dataEntryAndAdjustments.EnableUser": "Enable users to prepare historical consumption data before moving on the",
   "static.manualTagging.qatShipmentTitle": "QAT Shipment:",
+  "static.mt.linkingNotificationNote2": "your program first.",
   "static.common.startTyping": "Start typing to search",
   "static.dashboard.totalExpiries": "Total value of Expiries",
   "static.usagePeriod.conversionTOFUTest": "Max 14 digit number and 4 digits after decimal are allowed.",
