Added static label

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3649,5 +3649,6 @@
   "static.problemList.suggestion2":"Please consider planning & ordering, expediting, or increasing shipment quantity. Indicate if any of these actions have been/will be taken, and you face any obstacles.",
   "static.problemList.suggestion3":"Please consider adjust shipment quantity. Indicate if any of these actions have been/will be taken, and you face any obstacles.",
   "static.report.showAggregatedQuantities": "Show Aggregated Quantities",
-  "static.budget.duplicateBudget": "Budget code already exists for following program"
+  "static.budget.duplicateBudget": "Budget code already exists for following program",
+  "static.tooltip.showAggregatedQuantities": "If checked, the data table will provide the total consumption quantity across programs/countries"
 }
