--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -356,6 +356,7 @@
   "static.inventory.inventoryQunatityPU": "Inventory Quantity (Planning Unit)",
   "static.country.currency": "Currency",
   "static.tree.consumptionIntervalEveryXMonths": "Consumption interval (Every X months)",
+  "static.report.showAggregatedQuantities": "Show Aggregated Quantities",
   "static.extrapolation.mse": "MSE",
   "static.dashboard.pipelineprogramlist": "PipeLine files to be imported",
   "static.program.validmanagertext": "Select program manager",
@@ -1347,6 +1348,7 @@
   "static.ModelingTransfer.ModelingTypes": "Modeling and transfer can have four different modeling types",
   "static.supplyPlan.quantityPU": " Quantity (PU)",
   "static.commitVersion.conflicts": " Conflicts",
+  "static.consumptionGlobal.onlyShowPUsThatArePartOfAllPrograms": "Only show PUs that are available in ALL selected programs",
   "static.message.user.userNotFound": "User not found",
   "static.inventory.totalInvontory": "Total Inventory",
   "static.NodeData.Lag": "Lag",
@@ -1766,6 +1768,7 @@
   "static.dashboard.region": "Regions",
   "static.extrapolation.MissingData": "If there is missing data, use the green Interpolate button to fill in missing data.",
   "static.report.localprocurement": "Local Procurement",
+  "static.tooltip.showAggregatedQuantities": "If checked, the data table will provide the total consumption quantity across programs/countries",
   "static.organisation.organisationcodemax4digittext": "Display name length should be 4 characters long",
   "static.quantimed.doNotImport": "Do not import",
   "static.dashboard.realmcountry": "Country",
