--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -356,6 +356,7 @@
   "static.inventory.inventoryQunatityPU": "Cantidad de inventario (Producto)",
   "static.country.currency": "Divisa",
   "static.tree.consumptionIntervalEveryXMonths": "Intervalo de consumo (cada X meses)",
+  "static.report.showAggregatedQuantities": "Mostrar cantidades agregadas",
   "static.extrapolation.mse": "MSE",
   "static.dashboard.pipelineprogramlist": "Lista de programas de PipeLine",
   "static.program.validmanagertext": "Seleccionar el administrador del programa",
@@ -1347,6 +1348,7 @@
   "static.ModelingTransfer.ModelingTypes": "El modelado y la transferencia pueden tener cuatro tipos de modelado diferentes",
   "static.supplyPlan.quantityPU": "Cantidad (producto)",
   "static.commitVersion.conflicts": "Conflictos",
+  "static.consumptionGlobal.onlyShowPUsThatArePartOfAllPrograms": "Mostrar solo las unidades de procesamiento que están disponibles en TODOS los programas seleccionados.",
   "static.message.user.userNotFound": "Usuario no encontrado",
   "static.inventory.totalInvontory": "Inventario total",
   "static.NodeData.Lag": "campo atraso",
@@ -1766,6 +1768,7 @@
   "static.dashboard.region": "Regiones",
   "static.extrapolation.MissingData": "Si faltan datos, use el botón verde \"Interpolar\" para completar los datos faltantes.",
   "static.report.localprocurement": "Compra local",
+  "static.tooltip.showAggregatedQuantities": "Si se marca, la tabla de datos proporcionará la cantidad total de consumo en todos los programas/países.",
   "static.organisation.organisationcodemax4digittext": "Máximo 4 caracteres",
   "static.quantimed.doNotImport": "No importar",
   "static.dashboard.realmcountry": "País",
