--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -356,6 +356,7 @@
   "static.inventory.inventoryQunatityPU": "Quantité de stock (produit QAT)",
   "static.country.currency": "Devise",
   "static.tree.consumptionIntervalEveryXMonths": "Intervalle de consommation (Tous les X mois)",
+  "static.report.showAggregatedQuantities": "Afficher les quantités agrégées",
   "static.extrapolation.mse": "MSE",
   "static.dashboard.pipelineprogramlist": "Liste des programmes de PipeLine",
   "static.program.validmanagertext": "Sélectionner gestionnaire du programme",
@@ -1347,6 +1348,7 @@
   "static.ModelingTransfer.ModelingTypes": "La modélisation et le transfert peuvent avoir quatre types différents  de modélisation.",
   "static.supplyPlan.quantityPU": "Quantité (PU)",
   "static.commitVersion.conflicts": "Conflits",
+  "static.consumptionGlobal.onlyShowPUsThatArePartOfAllPrograms": "Afficher uniquement les unités pédagogiques disponibles dans TOUS les programmes sélectionnés.",
   "static.message.user.userNotFound": "Utilisateur non reconnu ",
   "static.inventory.totalInvontory": "Inventaire total",
   "static.NodeData.Lag": "Décalage",
@@ -1766,6 +1768,7 @@
   "static.dashboard.region": "Régions",
   "static.extrapolation.MissingData": "S'il manque des données, utiliser le bouton vert Interpoler pour compléter les données manquantes.",
   "static.report.localprocurement": "Approvisionnement local",
+  "static.tooltip.showAggregatedQuantities": "Si cette option est cochée, le tableau de données indiquera la quantité totale consommée par programme/pays.",
   "static.organisation.organisationcodemax4digittext": "La longueur du nom d`affichage doit être de 4 caractères",
   "static.quantimed.doNotImport": "N`importez pas",
   "static.dashboard.realmcountry": "Pays",
