--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -356,6 +356,7 @@
   "static.inventory.inventoryQunatityPU": "Quantidade do stock (unidade de planeamento)",
   "static.country.currency": "Moeda",
   "static.tree.consumptionIntervalEveryXMonths": "Intervalo de consumo (a cada X meses)",
+  "static.report.showAggregatedQuantities": "Mostrar quantidades agregadas",
   "static.extrapolation.mse": "MSE",
   "static.dashboard.pipelineprogramlist": "Arquivos PipeLine a serem importados",
   "static.program.validmanagertext": "Selecione o gestor de programa",
@@ -1347,6 +1348,7 @@
   "static.ModelingTransfer.ModelingTypes": "modelagem e a transferência podem ter quatro tipos diferentes de modelagem",
   "static.supplyPlan.quantityPU": "Quantidade (UP)",
   "static.commitVersion.conflicts": "Conflitos",
+  "static.consumptionGlobal.onlyShowPUsThatArePartOfAllPrograms": "Exibir apenas as unidades de produção que estão disponíveis em TODOS os programas selecionados.",
   "static.message.user.userNotFound": "Usuário não encontrado",
   "static.inventory.totalInvontory": "Stock total",
   "static.NodeData.Lag": "Atraso",
@@ -1766,6 +1768,7 @@
   "static.dashboard.region": "Regiões",
   "static.extrapolation.MissingData": "Se houver dados ausentes, use o botão verde \"Interpolar\" para preencher os dados ausentes.",
   "static.report.localprocurement": "Compra local",
+  "static.tooltip.showAggregatedQuantities": "Se selecionada, a tabela de dados fornecerá a quantidade total de consumo entre programas/países.",
   "static.organisation.organisationcodemax4digittext": "O nome de exibição deve conter apenas 4 caracteres",
   "static.quantimed.doNotImport": "Não importar",
   "static.dashboard.realmcountry": "País",
