--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3649,5 +3649,6 @@
   "static.problemList.minMaxProblemDescShipments":"\nThere are shipments in {{monthNames}}",
   "static.problemList.suggestion1":"Please consider delaying/canceling shipment(s), reviewing future expiries, or donating stock. Indicate if any of these actions have been/will be taken, and if you face any obstacles.",
   "static.problemList.suggestion2":"Please consider planning & ordering, expediting, or increasing shipment quantities. Indicate if any of these actions have been/will be taken, and if you face any obstacles.",
-  "static.problemList.suggestion3":"Please consider adjusting shipment quantities. Indicate if any of these actions have been/will be taken, and if you face any obstacles."
+  "static.problemList.suggestion3":"Please consider adjusting shipment quantities. Indicate if any of these actions have been/will be taken, and if you face any obstacles.",
+  "static.report.byCountry": "by Country"
 }
