--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3651,5 +3651,6 @@
   "static.problemList.suggestion2":"Please consider planning & ordering, expediting, or increasing shipment quantities. Indicate if any of these actions have been/will be taken, and if you face any obstacles.",
   "static.problemList.suggestion3":"Please consider adjusting shipment quantities. Indicate if any of these actions have been/will be taken, and if you face any obstacles.",
   "static.report.byCountry": "by Country",
-  "static.dashboard.shipmentByCountryheader": "Shipments (by Country)"
+  "static.dashboard.shipmentByCountryheader": "Shipments (by Country)",
+  "static.shipmentReport.yAxisInEquivalencyUnit": "Y-axis in Equivalency Unit" 
 }
